# snake-arena-interactive

./: Dockerfile  docker-compose.yml  openapi.yaml  package-lock.json  package.json  render.yaml
Backend/: .gitignore  Dockerfile  Makefile  README.md  database.py  main.py  models.py  pyproject.toml  sql_models.py
Backend/routers/: auth.py  games.py  leaderboard.py
Backend/tests/: test_api.py
Backend/tests_integration/: conftest.py  test_flows.py
Frontend/: index.html  package-lock.json  tailwind.config.ts
Frontend/src/: App.tsx
Frontend/src/components/: SnakeGame.tsx
Frontend/src/contexts/: AuthContext.tsx
Frontend/src/game/: snakeLogic.test.ts  snakeLogic.ts
Frontend/src/pages/: AuthPage.tsx  Index.tsx  SpectatePage.tsx
Frontend/src/services/: api.test.ts  api.ts
src/: index.css
src/components/: Leaderboard.tsx  Navigation.tsx  SnakeGame.tsx  SpectatorMode.tsx
src/pages/: LeaderboardPage.tsx
src/services/: api.test.ts  api.ts
