[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.124.2",
    "greenlet>=3.3.0",
    "passlib[argon2]>=1.7.4",
    "pydantic[email]>=2.12.5",
    "pytest-asyncio>=1.3.0",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
addopts = "-v"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
